@@ -1,0 +1,27 @@
+#!/bin/bash
+#
+# search
+#
+# Copyright (c) 2010 - The OpenSplash Team
+# http://www.opensplash-project.org/
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+term=$*
+
+term=$(echo $term | sed -e 's/search//i')
+
+term_encoded=$(perl -MURI::Escape -e "print uri_escape('$term');")
+nohup xdg-open "http://www.google.com/search?q=$term_encoded" > /dev/null &
+
